# dspy-prompt-optimizer

./: .env.example  .gitignore  README.md  agent_state_preservation.py  docker-compose.yml  pyproject.toml
api/: __init__.py  main.py
application/: __init__.py
application/services/: __init__.py  orchestrator.py
docs/: C1_context.puml  C2_container.puml  C3_component.puml  C4_code.puml
domain/: __init__.py
domain/agent/: __init__.py  models.py
domain/models/: __init__.py  validation.py
domain/session/: __init__.py  models.py  repository.py
infrastructure/: __init__.py
infrastructure/dspy/: __init__.py  optimizer.py
infrastructure/storage/: __init__.py  composite_repository.py  postgres_repository.py  redis_repository.py
scripts/: convert-diagrams.js
tests/: __init__.py  test_domain_models.py
